# generic-cracker

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cracker/: corethread.cpp  corethread.h  cracker.pro  keyspacethread.cpp  keyspacethread.h  main.cpp  runthread.cpp  runthread.h
cracker/libbcrypt-master/include/bcrypt/: BCrypt.hpp
cracker/libbcrypt-master/src/: bcrypt.c  crypt_blowfish.c  crypt_gensalt.c  wrapper.c
